# llama-tool-demo

./: .gitignore  Cargo.toml  README.md
src/: main.rs  system_prompt.md
