[package]
name = "llama-tool-demo"
version = "0.1.0"
edition = "2024"
authors = ["John Downey <jdowney@gmail.com>"]
description = "A Rust CLI demonstrating LLM tool-calling capabilities via llama.cpp"
repository = "https://github.com/jtdowney/llama-tool-demo"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hf-hub = "0.3"
jiff = "0.2"
llama-cpp-2 = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
